Iterator of Array.keys() returns object in wrong order https://bugs.webkit.org/show_bug.cgi?id=185197

Reviewed by Keith Miller.

JSTests:

We align the shape of our iterator result to the spec: {value,done} instead of {done,value}.

* stress/iterator-field-order.js: Added.
(shouldBe):
(shouldBe.JSON.stringify.array.values.next):
(shouldBe.JSON.stringify.array.keys.next):
(shouldBe.JSON.stringify.array.entries.next):
(async.asyncIterator):
(iterator.next.then):
(generator):
(shouldBe.JSON.stringify.generator.next):
(shouldBe.JSON.stringify.map.keys.next):
(shouldBe.JSON.stringify.map.values.next):
(shouldBe.JSON.stringify.map.entries.next):
(set new):

Source/JavaScriptCore:

* builtins/ArrayIteratorPrototype.js:
(globalPrivate.arrayIteratorValueNext):
(globalPrivate.arrayIteratorKeyNext):
(globalPrivate.arrayIteratorKeyValueNext):
* builtins/AsyncFromSyncIteratorPrototype.js:
* builtins/AsyncGeneratorPrototype.js:
(globalPrivate.asyncGeneratorResolve):
* builtins/GeneratorPrototype.js:
(globalPrivate.generatorResume):
* builtins/MapIteratorPrototype.js:
(globalPrivate.mapIteratorNext):
* builtins/SetIteratorPrototype.js:
(globalPrivate.setIteratorNext):
* builtins/StringIteratorPrototype.js:
(next):
* runtime/IteratorOperations.cpp:
(JSC::createIteratorResultObjectStructure):
(JSC::createIteratorResultObject):


Canonical link: https://commits.webkit.org/202792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233740 268f45cc-cd09-0410-ab3c-d52691b4dbfc